--- a/src/renderer/atlas/atlas.vcxproj
+++ b/src/renderer/atlas/atlas.vcxproj
@@ -18,7 +18,7 @@
     <ClCompile Include="BackendD2D.cpp" />
     <ClCompile Include="BackendD3D.cpp" />
     <ClCompile Include="BuiltinGlyphs.cpp" />
-    <ClCompile Include="dwrite.cpp" />
+    <ClCompile Include="dwrite_helpers.cpp" />
     <ClCompile Include="DWriteTextAnalysis.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
@@ -33,7 +33,7 @@
     <ClInclude Include="BackendD3D.h" />
     <ClInclude Include="BuiltinGlyphs.h" />
     <ClInclude Include="common.h" />
-    <ClInclude Include="dwrite.h" />
+    <ClInclude Include="dwrite_helpers.h" />
     <ClInclude Include="DWriteTextAnalysis.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="wic.h" />
@@ -45,7 +45,7 @@
     <FxCompile Include="custom_shader_vs.hlsl">
       <ShaderType>Vertex</ShaderType>
     </FxCompile>
-    <FxCompile Include="dwrite.hlsl">
+    <FxCompile Include="dwrite_helpers.hlsl">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="shader_common.hlsl">
