--- a/src/host/proxy/CMakeLists.txt
+++ b/src/host/proxy/CMakeLists.txt
@@ -7,6 +7,7 @@ foreach(FILE ${IDL_FILES})
 		BYPRODUCTS
 			${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/${FILE_WE}_i.c
 			${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/${FILE_WE}.h
+			${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/dlldata.c
 		MAIN_DEPENDENCY ${FILE}
 		COMMAND midl.exe /nologo /target NT100 /x64 /out "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>" /h "${FILE_WE}.h" ${FILE}
 		COMMENT "MIDL ${FILE}"
