cmake: add RC/Manifest and some install rules

--- a/src/host/exe/CMakeLists.txt
+++ b/src/host/exe/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(conhost
 	PRIVATE
 		CConsoleHandoff.cpp
 		exemain.cpp
+		Host.EXE.rc
+		OpenConsole.exe.manifest
 )
 
 target_include_directories(conhost
@@ -23,4 +25,10 @@ target_link_options(conhost PRIVATE /entry:wWinMainCRTStartup)
 target_precompile_headers(conhost
 	PRIVATE
 		../precomp.h
+)
+
+install(
+	TARGETS
+		conhost
+	DESTINATION bin
 )
